Fixes to bottom spacing

--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ h2 {
     text-align: left;
     padding: 0px;
     position: absolute;
-    bottom: 5%;
+    bottom: 30px;
     left: 38px;
     z-index: 1;
     letter-spacing: -3px;
